<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">Lottery_Rotary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_account_edit_hint">手机号码或者工号</string>
    <string name="login_pwd_edit_hint">请输入密码</string>
    <string name="register_top">用户注册</string>
    <string name="register_employeeId">员工号</string>
    <string name="register_tele">手机号码</string>
    <string name="register_pwd">密码</string>
    <string name="register_pwd_sure">确认密码</string>
    <string name="register_name">姓名</string>
    <string name="register_bt_register">注册</string>
    <string name="register_departmentType">所在部门</string>
    <string name="_login_account">账号：</string>
    <string name="_login_account_hint">请输入您的员工号</string>
    <string name="_login_pwd">密码：</string>
    <string name="_login_pwd_hint">请输入您的密码</string>
    <string name="_login_bt">登陆</string>
    <string name="_login_2register">注册</string>
    <string name="_register">注册界面</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="_lucky">年会抽奖系统</string>
    <string name="main_top_text">主界面</string>
    <string name="main_lottery">抽奖</string>
    <string name="main_vote">投票</string> -->
   <!--  <?xml version="1.0" encoding="utf-8"?>
<resources> -->

    <string name="app_name">Lottery_Rotary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_account_edit_hint">手机号码或者工号</string>
    <string name="login_pwd_edit_hint">请输入密码</string>
    <string name="register_top">用户注册</string>
    <string name="register_employeeId">员工号</string>
    <string name="register_tele">手机号码</string>
    <string name="register_pwd">密码</string>
    <string name="register_pwd_sure">确认密码</string>
    <string name="register_name">姓名</string>
    <string name="register_bt_register">注册</string>
    <string name="register_departmentType">所在部门</string>
    <string name="_login_wordID">工号：</string>
    <string name="_login_account_hint">请输入您的员工号</string>
    <string name="_login_name">姓名：</string>
    <string name="_login_name_hint">请输入您的姓名</string>
    <string name="_login_bt">登陆</string>
    <string name="_login_success">登陆成功</string>
    <string name="_login_failed">工号或者姓名错误</string>
    <string name="_login_netwrong">网络异常，请检查网络是否开启</string>
    <string name="_login_workIdNull">工号不能为空</string>
    <string name="_login_nameNull">姓名不能为空</string>
    <string name="_login_2register">注册</string>
    <string name="_register">注册界面</string>
    <string name="_1_0_1">1.0.1</string>
    <string name="_lucky">年会抽奖系统</string>
    <string name="main_top_text">主界面</string>
    <string name="main_lottery">抽奖</string>
    <string name="main_vote">投票</string>
    <string name="person_centre_top" >个人中心</string>

<!-- </resources> -->
    <string name="_meme">摸摸   摇奖了</string>
    <string name="_momo">摸摸   摇奖了</string>

</resources>