<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 顶部图片 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/login_top"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/jlx_login_bg" />
        </LinearLayout>

        <!-- logo -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dip"
                android:src="@drawable/jlx_login_logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/jlx_login_center_language" />
        </LinearLayout>
        <!-- 输入框模块 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="40dip"
            android:layout_marginRight="40dip"
            android:layout_weight="1"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:background="@drawable/jlx_login_input_work_id"
                android:orientation="horizontal"
                android:paddingBottom="2dip"
                android:paddingLeft="15dip"
                android:paddingRight="20dp"
                android:paddingTop="2dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/_login_wordID"
                    android:textColor="#88000000" />

                <EditText
                    android:id="@+id/login_workID"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:hint="@string/_login_account_hint"
                    android:inputType="none"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/jlx_login_input_name"
                android:orientation="horizontal"
                android:paddingBottom="2dip"
                android:paddingLeft="15dip"
                android:paddingRight="20dp"
                android:paddingTop="2dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/_login_name"
                    android:textColor="#88000000" />

                <EditText
                    android:id="@+id/login_Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:hint="@string/_login_name_hint"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <!-- 底部按钮 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_weight="1"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/jlx_login_bt_bg"
                android:text="@string/_login_bt"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>